chore: split TailwindCSS imports to preserve correct style order

--- a/example/assets/index.css
+++ b/example/assets/index.css
@@ -1,4 +1,7 @@
-@import "tailwindcss";
+@import "tailwindcss/theme.css";
+@import "tailwindcss/preflight.css";
+@import "tailwindcss/utilities.css";
+
 @plugin "daisyui";
 @source "../**/*.vue";
 
